# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
src/: camera.cpp  camera.h  fovea.cpp  fovea.h  hitrec.h  lightsrc.h  material.h  ray.h  renderer.cpp  renderer.h  sphere.cpp  sphere.h  surface.h  triangle.cpp  triangle.h  utils.cpp  utils.h  world.cpp  world.h
